# school-pipeline

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt  setup.py
.dbx/: project.json
.github/workflows/: ci.yml  databricks-deploy.yml
conf/: deployment.yml  dev.json
resources/: sample_job.job.yml  school_pipeline_etl.pipeline.yml
src/: sample_notebook.ipynb
src/school_pipeline/: bronze_loader.py  main.py
src/school_pipeline/conf/: dev.json
src/school_pipeline/jobs/: bronze.py
src/school_pipeline/pipelines/: bronze_pipeline.py
src/school_pipeline_etl/: README.md
src/school_pipeline_etl/transformations/: sample_trips_school_pipeline.py  sample_zones_school_pipeline.py
tests/: sample_taxis_test.py
