[project]
name = "school_pipeline"
version = "0.1.1"
authors = [{ name = "piotr@byczkowskipgmail.onmicrosoft.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"school_pipeline" = ["conf/*.json"]

[project.scripts]
main = "school_pipeline.jobs.bronze:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
